force-app/main/default/objects/API_Logs__c/API_Logs__c.object-meta.xml
<CustomObject>
    <description>Object to store the logs of api calls</description>
    <label>API Logs</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>