force-app/main/default/objects/API_Logs__c/fields/Body_Result__c.field-meta.xml
<CustomField>
    <fullName>Body_Result__c</fullName>
    <description>Body result of the callout</description>
    <label>Body Result</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>