force-app/main/default/objects/API_Logs__c/fields/status_code__c.field-meta.xml
<CustomField>
    <fullName>status_code__c</fullName>
    <description>field to store the status code of the call</description>
    <label>status code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>