force-app/main/default/objects/API_Logs__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if the result of the callout is successful</description>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>