force-app/main/default/objects/API_Logs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Success__c</columns>
    <columns>status_code__c</columns>
    <columns>Endpoint__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>